# Futures-Trading-AI

./: LICENSE  README.md  pyproject.toml
config/: strategy.yaml
docs/: CODEX_TASKS.md  PROJECT.md  ROADMAP.md  STRATEGY.md
src/futures_trading_ai/: __init__.py
src/futures_trading_ai/config/: loader.py
src/futures_trading_ai/data/: models.py
src/futures_trading_ai/indicators/: ma_cross.py  moving_average.py
src/futures_trading_ai/strategy/: nisk_ma_cross_strategy.py  signals.py
tests/: test_sprint_1.py
